--- a/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -810,7 +810,13 @@ LastLogListing=LoadErrors
 [ContentBrowserRecent]
 MRUItem0=/Game/GameJam2019/Levels/TESTWorld
 MRUItem1=/Game/GGJ2019
-MRUItem2=/Game/GameJam/Levels/TESTWorld
+MRUItem2=/Game/Unbreakable1
+MRUItem3=/Game/Unbreakable
+MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem5=/Game/Stone
+MRUItem6=/Game/NewBlueprint
+MRUItem7=/Engine/BasicShapes/Cube
+MRUItem8=/Game/GameJam/Levels/TESTWorld
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -934,15 +940,121 @@ CharacterMovementComponent.Character Movement: Swimming=True
 CharacterMovementComponent.Character Movement: Flying=True
 CharacterMovementComponent.Character Movement: Custom Movement=True
 CharacterMovementComponent.Character Movement: NavMesh Movement=True
+Actor.Rendering=True
+Actor.Actor=True
+RectLight.TransformCommon=True
+RectLight.Light=True
+RectLight.Rendering=True
+RectLight.Lightmass=True
+RectLight.Performance=True
+RectLight.LightFunction=True
+RectLight.Light Profiles=True
+RectLight.DistanceFieldShadows=True
+RectLight.Tags=True
+RectLight.Cooking=True
+RectLight.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
+Actor.Input=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Rendering=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Input=True
+NewBlueprint_C.Tick=True
+NewBlueprint_C.Rendering=True
+NewBlueprint_C.Replication=True
+NewBlueprint_C.Input=True
+NewBlueprint_C.Actor=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+Unbreakable_C.TransformCommon=True
+Unbreakable_C.Rendering=True
+Unbreakable_C.Input=True
+Unbreakable_C.Actor=True
+Stone_C.TransformCommon=True
+Stone_C.Rendering=True
+Stone_C.Input=True
+Stone_C.Actor=True
+Stone_C.Tick=True
+Stone_C.Replication=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+Unbreakable_C.Tick=True
+Unbreakable_C.Replication=True
+Unbreakable1_C.Tick=True
+Unbreakable1_C.Rendering=True
+Unbreakable1_C.Replication=True
+Unbreakable1_C.Input=True
+Unbreakable1_C.Actor=True
+Unbreakable1_C.TransformCommon=True
+Dirt_C.TransformCommon=True
+Dirt_C.Rendering=True
+Dirt_C.Input=True
+Dirt_C.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/GameJam2019/Assets/Dirt.Dirt;
+RecentlyPlaced=/Game/GameJam2019/Assets/Unbreakable1.Unbreakable1;
+RecentlyPlaced=/Game/GameJam2019/Assets/Unbreakable.Unbreakable;
+RecentlyPlaced=/Game/Unbreakable.Unbreakable;
+RecentlyPlaced=/Game/Dirt.Dirt;
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_AssetPlatform.M_AssetPlatform;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
+StaticMeshActor.StaticMesh=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -952,5 +1064,53 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperCharacter="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[AssetEditorToolkitTabLocation]
+/Engine/BasicShapes/Cube.Cube=1
+/Game/Unbreakable.Unbreakable=1
+/Game/Stone.Stone=1
+/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
+/Game/Unbreakable1.Unbreakable1=1
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
