--- a/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,6 +79,7 @@ LastExecutedLaunchName=CNIC331-13
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowPosition=(X=315,Y=143)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -135,14 +136,14 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/GameJam/Levels
+ContentBrowserTab2.SelectedPaths=/Game/GameJam2019/Assets
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GameJam2019/Levels
+ContentBrowserTab1.SelectedPaths=/Game/GameJam2019/Assets/Materials
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -807,20 +808,33 @@ StaticMeshEditor.TimeStamp=2018.09.05-21.38.21
 StaticMeshEditor.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2018.09.05-21.38.07
 BlueprintGraph.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2018.09.05-21.38.22
+TextureEditor.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GameJam2019/Levels/TESTWorld
-MRUItem1=/Game/GGJ2019
-MRUItem2=/Game/Unbreakable1
-MRUItem3=/Game/Unbreakable
-MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem5=/Game/Stone
-MRUItem6=/Game/NewBlueprint
-MRUItem7=/Engine/BasicShapes/Cube
-MRUItem8=/Game/GameJam/Levels/TESTWorld
+MRUItem0=/Game/GameJam2019/Assets/Materials/gravelblock
+MRUItem1=/Game/GameJam2019/Assets/Unbreakable
+MRUItem2=/Game/GameJam2019/Assets/Stone
+MRUItem3=/Game/GameJam2019/Assets/Materials/Unbreakable
+MRUItem4=/Game/GameJam2019/Assets/Materials/Dirt_Material
+MRUItem5=/Game/GameJam2019/Assets/Materials/Stone
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem7=/Game/GameJam2019/Assets/Materials/dirtblock2
+MRUItem8=/Game/GameJam2019/Assets/Dirt
+MRUItem9=/Game/GameJam2019/Assets/Materials/Dirt_Sprite
+MRUItem10=/Game/GameJam2019/Assets/Materials/Dirt2
+MRUItem11=/Game/GameJam2019/Assets/Materials/Dirt
+MRUItem12=/Game/GameJam2019/Assets/Materials/Dirt_Spriter
+MRUItem13=/Game/GameJam2019/Levels/TESTWorld
+MRUItem14=/Game/GGJ2019
+MRUItem15=/Game/Unbreakable1
+MRUItem16=/Game/Unbreakable
+MRUItem17=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem18=/Game/Stone
+MRUItem19=/Game/NewBlueprint
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -1042,11 +1056,71 @@ Dirt_C.TransformCommon=True
 Dirt_C.Rendering=True
 Dirt_C.Input=True
 Dirt_C.Actor=True
+Dirt_C.Tick=True
+Dirt_C.Replication=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+MaterialExpressionSpriteTextureSampler.Paper2D=True
+MaterialExpressionSpriteTextureSampler.MaterialExpressionTextureSample=True
+MaterialExpressionSpriteTextureSampler.MaterialExpressionTextureBase=True
+MaterialExpressionSpriteTextureSampler.MaterialExpression=True
+PaperSpriteComponent.Variable=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Sockets=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.ComponentReplication=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperSpriteComponent.Events=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
+PaperTileMapComponent.Variable=True
+PaperTileMapComponent.TransformCommon=True
+PaperTileMapComponent.Warning=True
+PaperTileMapComponent.Tile Map=True
+PaperTileMapComponent.Setup=True
+PaperTileMapComponent.Sockets=True
+PaperTileMapComponent.Materials=True
+PaperTileMapComponent.Sprite=True
+PaperTileMapComponent.Collision=True
+PaperTileMapComponent.ImportSettings=True
+PaperTileMapComponent.Physics=True
+PaperTileMapComponent.Lighting=True
+PaperTileMapComponent.Tags=True
+PaperTileMapComponent.Rendering=True
+PaperTileMapComponent.ComponentReplication=True
+PaperTileMapComponent.Activation=True
+PaperTileMapComponent.Cooking=True
+PaperTileMapComponent.Events=True
+Dirt2_C.Tick=True
+Dirt2_C.Rendering=True
+Dirt2_C.Replication=True
+Dirt2_C.Input=True
+Dirt2_C.Actor=True
+2DSideScrollerCharacter_C.Default=True
+2DSideScrollerCharacter_C.Tick=True
+2DSideScrollerCharacter_C.Replication=True
+2DSideScrollerCharacter_C.Variable=True
+2DSideScrollerCharacter_C.Sockets=True
+2DSideScrollerCharacter_C.ComponentReplication=True
+2DSideScrollerCharacter_C.Events=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/GameJam2019/Assets/Dirt.Dirt;
-RecentlyPlaced=/Game/GameJam2019/Assets/Unbreakable1.Unbreakable1;
-RecentlyPlaced=/Game/GameJam2019/Assets/Unbreakable.Unbreakable;
+RecentlyPlaced=/Game/GameJam2019/Assets/Stone.Stone;/Engine/Transient.ActorFactoryBlueprint_0
+RecentlyPlaced=/Game/GameJam2019/Assets/Dirt.Dirt;/Engine/Transient.ActorFactoryBlueprint_0
+RecentlyPlaced=/Game/GameJam2019/Assets/Unbreakable.Unbreakable;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/Unbreakable.Unbreakable;
 RecentlyPlaced=/Game/Dirt.Dirt;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
@@ -1059,6 +1133,7 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
 StaticMeshActor.StaticMesh=True
+PaperSprite.Sprite=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1078,6 +1153,15 @@ bUseUnsortedMenus=False
 /Game/Stone.Stone=1
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
 /Game/Unbreakable1.Unbreakable1=1
+/Game/GameJam2019/Assets/Dirt.Dirt=0
+/Game/GameJam2019/Assets/Materials/Dirt_Material.Dirt_Material=0
+/Game/GameJam2019/Assets/Materials/Dirt_Sprite.Dirt_Sprite=0
+/Game/GameJam2019/Assets/Unbreakable.Unbreakable=0
+/Game/GameJam2019/Assets/Materials/dirtblock2.dirtblock2=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=0
+/Game/GameJam2019/Assets/Stone.Stone=0
+/Game/GameJam2019/Assets/Materials/Stone.Stone=0
+/Game/GameJam2019/Assets/Materials/Unbreakable.Unbreakable=0
 
 [MaterialEditor]
 PrimType=1
@@ -1116,5 +1200,20 @@ bPlatformUsed[29]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
