--- a/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ LastExecutedLaunchName=CNIC331-13
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowPosition=(X=-8,Y=-8)
+NewWindowPosition=(X=2026,Y=258)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -146,7 +146,7 @@ ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GameJam2019/Levels
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -154,16 +154,18 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/GameJam2019/Levels/TESTWorld
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/GameJam2019/Characters/Judy_grapler.Judy_grapler
-OpenAssetsAtExit=/Game/GameJam2019/Characters/Danny_dino.Danny_dino
+CleanShutdown=True
 OpenAssetsAtExit=/Game/GameJam2019/Characters/Craig_Digger.Craig_Digger
-OpenAssetsAtExit=/Game/2DSideScroller/Sprites/IdleAnimation.IdleAnimation
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/GrappleProjectile.GrappleProjectile
+OpenAssetsAtExit=/Game/GameJam2019/Characters/Judy_grapler.Judy_grapler
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/GrappleHook.GrappleHook
+OpenAssetsAtExit=/Game/GameJam2019/Assets/Dirt.Dirt
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/TNT.TNT
 
 [RootWindow]
-ScreenPosition=X=2026.000 Y=270.000
+ScreenPosition=X=904.000 Y=395.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -824,26 +826,26 @@ ExternalImagePicker.LastCompileMethod=Unknown
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GameJam2019/Characters/Judy_grapler
-MRUItem1=/Game/GameJam2019/Characters/Danny_dino
-MRUItem2=/Game/GameJam2019/Characters/Craig_Digger
-MRUItem3=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Danny_BASE_Sprite
-MRUItem4=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Judy_BASE_Sprite
-MRUItem5=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Craig_BACE
-MRUItem6=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Judy_BACE_Sprite
-MRUItem7=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Craig_BACE_Sprite
-MRUItem8=/Game/GameJam2019/Characters/Sprites/Craig_Idle
-MRUItem9=/Game/2DSideScroller/Sprites/IdleFrames/IdleCycle1
-MRUItem10=/Game/2DSideScroller/Sprites/Craig_Idol
-MRUItem11=/Game/2DSideScroller/Sprites/IdleAnimation
-MRUItem12=/Game/2DSideScroller/Sprites/PrototypingSprite
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem14=/Game/2DSideScrollerBP/Blueprints/GrappleHook
-MRUItem15=/Game/Blueprints/NewPlayerController
-MRUItem16=/Game/GameJam2019/Characters/2DSideScrollerCharacter_3
-MRUItem17=/Game/GameJam2019/Levels/TESTWorld
-MRUItem18=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem19=/Game/GameJam2019/Assets/Stone1
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/TNT
+MRUItem1=/Game/GameJam2019/Assets/Dirt
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/GrappleHook
+MRUItem3=/Game/GameJam2019/Characters/Judy_grapler
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/GrappleProjectile
+MRUItem5=/Game/GameJam2019/Characters/Craig_Digger
+MRUItem6=/Game/GameJam2019/Characters/Danny_dino
+MRUItem7=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Danny_BASE_Sprite
+MRUItem8=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Judy_BASE_Sprite
+MRUItem9=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Craig_BACE
+MRUItem10=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Judy_BACE_Sprite
+MRUItem11=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Craig_BACE_Sprite
+MRUItem12=/Game/GameJam2019/Characters/Sprites/Craig_Idle
+MRUItem13=/Game/2DSideScroller/Sprites/IdleFrames/IdleCycle1
+MRUItem14=/Game/2DSideScroller/Sprites/Craig_Idol
+MRUItem15=/Game/2DSideScroller/Sprites/IdleAnimation
+MRUItem16=/Game/2DSideScroller/Sprites/PrototypingSprite
+MRUItem17=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem18=/Game/Blueprints/NewPlayerController
+MRUItem19=/Game/GameJam2019/Characters/2DSideScrollerCharacter_3
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -2205,14 +2207,48 @@ REINST_Danny_dino_C_353.ComponentReplication=True
 REINST_Danny_dino_C_353.Activation=True
 REINST_Danny_dino_C_353.Cooking=True
 REINST_Danny_dino_C_353.Events=True
+GrappleProjectile_C.Tick=True
+GrappleProjectile_C.Rendering=True
+GrappleProjectile_C.Replication=True
+GrappleProjectile_C.Input=True
+GrappleProjectile_C.Actor=True
+FloatingPawnMovement.FloatingPawnMovement=True
+FloatingPawnMovement.NavMovement=True
+FloatingPawnMovement.Velocity=True
+FloatingPawnMovement.PlanarMovement=True
+FloatingPawnMovement.MovementComponent=True
+FloatingPawnMovement.Tags=True
+FloatingPawnMovement.ComponentReplication=True
+FloatingPawnMovement.Activation=True
+FloatingPawnMovement.Variable=True
+FloatingPawnMovement.Cooking=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+TNT_C.Tick=True
+TNT_C.Rendering=True
+TNT_C.Replication=True
+TNT_C.Input=True
+TNT_C.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/GrappleHook.GrappleHook;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/GameJam2019/Characters/Danny_dino.Danny_dino;
 RecentlyPlaced=/Game/GameJam2019/Characters/Judy_grapler.Judy_grapler;
 RecentlyPlaced=/Game/GameJam2019/Characters/Craig_Digger.Craig_Digger;
 RecentlyPlaced=/Game/GameJam2019/Assets/Unbreakable.Unbreakable;/Engine/Transient.ActorFactoryBlueprint_0
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/GrappleHook.GrappleHook;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter_4.2DSideScrollerCharacter_4;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter_3.2DSideScrollerCharacter_3;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter_2.2DSideScrollerCharacter_2;
@@ -2263,8 +2299,8 @@ ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyPaths
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" \"Object.TrackSettings.FbxSettings.FbxSettings[0]\" \"Object.TrackSettings.FbxSettings.FbxSettings[0].PropertyPath\" \"Object.TrackSettings.FbxSettings.FbxSettings[1]\" \"Object.TrackSettings.FbxSettings.FbxSettings[1].PropertyPath\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" "
-AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
-IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
+AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
+IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
@@ -2291,6 +2327,11 @@ Judy_grapler_C=
 REINST_Judy_grapler_C_213="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Danny_dino_C=
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" \"Object.Sprite.KeyFrames.KeyFrames[2]\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
