--- a/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/GameJam2019/Levels/TESTWorld
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=315.000 Y=154.000
@@ -820,26 +820,26 @@ ExternalImagePicker.LastCompileMethod=Unknown
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GameJam2019/Assets/Stone2
-MRUItem1=/Game/GameJam2019/Assets/Stone1
-MRUItem2=/Game/GameJam2019/Assets/Dirt
-MRUItem3=/Game/GameJam2019/Assets/Stone
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/TNT
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/GrappleHook
-MRUItem6=/Game/GameJam2019/Characters/Judy_grapler
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/GrappleProjectile
-MRUItem8=/Game/GameJam2019/Characters/Craig_Digger
-MRUItem9=/Game/GameJam2019/Characters/Danny_dino
-MRUItem10=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Danny_BASE_Sprite
-MRUItem11=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Judy_BASE_Sprite
-MRUItem12=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Craig_BACE
-MRUItem13=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Judy_BACE_Sprite
-MRUItem14=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Craig_BACE_Sprite
-MRUItem15=/Game/GameJam2019/Characters/Sprites/Craig_Idle
-MRUItem16=/Game/2DSideScroller/Sprites/IdleFrames/IdleCycle1
-MRUItem17=/Game/2DSideScroller/Sprites/Craig_Idol
-MRUItem18=/Game/2DSideScroller/Sprites/IdleAnimation
-MRUItem19=/Game/2DSideScroller/Sprites/PrototypingSprite
+MRUItem0=/Game/GameJam2019/Assets/Bracelet
+MRUItem1=/Game/GameJam2019/Assets/Bracelet_3
+MRUItem2=/Game/GameJam2019/Assets/Materials/DogBone
+MRUItem3=/Game/GameJam2019/Assets/Materials/Charm
+MRUItem4=/Game/GameJam2019/Assets/Materials/rope_3
+MRUItem5=/Game/GameJam2019/Assets/Materials/bone
+MRUItem6=/Game/GameJam2019/Assets/Stone2
+MRUItem7=/Game/GameJam2019/Assets/Stone1
+MRUItem8=/Game/GameJam2019/Assets/Dirt
+MRUItem9=/Game/GameJam2019/Assets/Stone
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/TNT
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/GrappleHook
+MRUItem12=/Game/GameJam2019/Characters/Judy_grapler
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/GrappleProjectile
+MRUItem14=/Game/GameJam2019/Characters/Craig_Digger
+MRUItem15=/Game/GameJam2019/Characters/Danny_dino
+MRUItem16=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Danny_BASE_Sprite
+MRUItem17=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Judy_BASE_Sprite
+MRUItem18=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Craig_BACE
+MRUItem19=/Game/GameJam2019/Characters/Sprites/SpriteFrames/Judy_BACE_Sprite
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -2239,8 +2239,28 @@ CapsuleComponent.Variable=True
 CapsuleComponent.Sockets=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Events=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+Bracelet_3_C.Tick=True
+Bracelet_3_C.Rendering=True
+Bracelet_3_C.Replication=True
+Bracelet_3_C.Input=True
+Bracelet_3_C.Actor=True
+Picture_C.Tick=True
+Picture_C.Rendering=True
+Picture_C.Replication=True
+Picture_C.Input=True
+Picture_C.Actor=True
+Bracelet_C.Tick=True
+Bracelet_C.Rendering=True
+Bracelet_C.Replication=True
+Bracelet_C.Input=True
+Bracelet_C.Actor=True
+Bracelet_C.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/GameJam2019/Assets/Bracelet.Bracelet;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/GrappleHook.GrappleHook;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/GameJam2019/Characters/Danny_dino.Danny_dino;
@@ -2260,7 +2280,6 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_AssetPlatform.M_AssetPlatform;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
@@ -2269,6 +2288,7 @@ PaperSprite.Sprite=True
 GrappleHook_C.Actor=True
 2DSideScrollerGameMode_C.Tick=True
 BoxComponent.Physics=True
+Texture2D.Compositing=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
