--- a/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject4/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -819,7 +819,7 @@ ExternalImagePicker.TimeStamp=2018.08.27-13.59.58
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [ContentBrowserRecent]
 MRUItem0=/Game/2DSideScrollerBP/Blueprints/GrappleProjectile
